fix shadows in overflow code

--- a/assets/styles/objects/code.css
+++ b/assets/styles/objects/code.css
@@ -50,12 +50,12 @@
   left: 50%;
   transform: translate(-50%, 0);
   background:
-    linear-gradient(to right, #313131 30%, rgba(255, 255, 255, 0)),
-    linear-gradient(to right, rgba(255, 255, 255, 0), #313131 70%) 0 100%,
+    linear-gradient(to right, rgb(49, 49, 49) 30%, rgba(49, 49, 49, 0)),
+    linear-gradient(to right, rgba(49, 49, 49, 0), rgb(49, 49, 49) 70%) 0 100%,
     radial-gradient(farthest-side at 0% 50%, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0)),
     radial-gradient(farthest-side at 100% 50%, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0)) 0 100%;
   background-repeat: no-repeat;
-  background-size: 50px 100%, 50px 100%, 20px 100%, 20px 100%;
+  background-size: 50px 100%, 50px 100%, 25px 100%, 25px 100%;
   background-position: 0 0, 100%, 0 0, 100%;
 	background-attachment: local, local, scroll, scroll;
   color: inherit;
